--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "E-Bikes Manufacturing Site",
     "description": "E-Bikes Manufacturing site. Built on Lightning Web Components Open Source.",
     "repository": "https://github.com/pozil/ebikes-manufacturing-lwc-oss",
-    "logo": "https://github.com/pozil/ebikes-manufacturing-lwc-oss/raw/master/src/client/resources/app-logo.svg",
+    "logo": "https://lwc-recipes-oss.herokuapp.com/resources/images/logo.svg",
     "keywords": ["lightning", "salesforce", "web-components", "open source"],
     "env": {
         "SF_LOGIN_URL": {
