--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "bulma": "^0.7.5",
         "dotenv": "^8.1.0",
         "jsforce": "^1.9.2",
-        "lwc-services": "^1.2.2",
+        "lwc-services": "^1.3.0-beta.14",
         "ws": "^7.1.2"
     },
     "devDependencies": {
@@ -42,18 +42,20 @@
     },
     "repository": "pozil/lwc-oss-manufacturing",
     "scripts": {
-        "start": "npm run build && npm run serve",
+        "start": "npm run build && node src/server/server.js",
         "build": "lwc-services build -m production",
         "build:development": "lwc-services build",
         "lint": "eslint ./src/**/*.js",
         "prettier": "prettier --write '**/*.{css,html,js,json,md,yaml,yml}'",
         "prettier:verify": "prettier --list-different '**/*.{css,html,js,json,md,yaml,yml}'",
         "serve": "lwc-services serve",
-        "test:unit": "lwc-services test",
-        "test:unit:coverage": "lwc-services test --coverage",
-        "test:unit:debug": "lwc-services test --debug",
-        "test:unit:watch": "lwc-services test --watch",
-        "watch": "lwc-services watch",
+        "test:unit": "lwc-services test:unit",
+        "test:unit:coverage": "lwc-services test:unit --coverage",
+        "test:unit:debug": "lwc-services test:unit --debug",
+        "test:unit:watch": "lwc-services test:unit --watch",
+        "watch": "run-p watch:client watch:server",
+        "watch:client": "lwc-services watch",
+        "watch:server": "node scripts/express-dev.js",
         "preinstall": "rm -fr src/client/resources/dependencies",
         "postinstall": "mkdir -p src/client/resources/dependencies && cp node_modules/bulma/css/bulma.min.css src/client/resources/dependencies/."
     }
