--- a/package.json
+++ b/package.json
@@ -1,43 +1,39 @@
 {
     "name": "lwc-oss-manufacturing",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "author": "pozil",
     "bugs": "https://github.com/pozil/lwc-oss-manufacturing/issues",
     "dependencies": {
-        "@lwc/compiler": "1.1.0-alpha4",
-        "@lwc/engine": "1.1.0-alpha4",
+        "@grpc/grpc-js": "^1.6.2",
+        "@grpc/proto-loader": "^0.6.9",
+        "@lwc/compiler": "^2.12.1",
+        "@lwc/engine": "^1.17.6",
+        "avro-js": "^1.11.0",
         "bulma": "^0.7.5",
-        "dotenv": "^8.1.0",
-        "jsforce": "^1.9.2",
-        "lwc-services": "^1.3.0-beta.14",
-        "ws": "^7.1.2"
+        "certifi": "^14.5.15",
+        "dotenv": "^16.0.0",
+        "grpc": "^1.24.11",
+        "jsforce": "^1.11.0",
+        "lwc-services": "^3.2.2",
+        "ws": "^8.5.0"
     },
     "devDependencies": {
-        "husky": "^2.7.0",
-        "lint-staged": "^8.2.1"
+        "eslint": "^7.32.0",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.3.7",
+        "prettier": "^2.6.2"
     },
     "engines": {
-        "node": ">=10.0.0"
+        "node": ">=16.0.0"
     },
     "homepage": "https://github.com/pozil/lwc-oss-manufacturing",
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
-    },
-    "keywords": [
-        "lwc"
-    ],
-    "license": "MIT",
+    "license": "CC0-1.0",
     "lint-staged": {
         "**/*.{css,html,js,json,md,yaml,yml}": [
             "prettier --write"
         ],
-        "**/modules/**/*.js": [
+        "**/src/**/*.js": [
             "eslint"
-        ],
-        "*": [
-            "git add"
         ]
     },
     "repository": "pozil/lwc-oss-manufacturing",
@@ -57,6 +53,11 @@
         "watch:client": "lwc-services watch",
         "watch:server": "node scripts/express-dev.js",
         "preinstall": "rm -fr src/client/resources/dependencies",
-        "postinstall": "mkdir -p src/client/resources/dependencies && cp node_modules/bulma/css/bulma.min.css src/client/resources/dependencies/."
+        "postinstall": "husky install && mkdir -p src/client/resources/dependencies && cp node_modules/bulma/css/bulma.min.css src/client/resources/dependencies/.",
+        "precommit": "lint-staged"
+    },
+    "volta": {
+        "node": "16.13.1",
+        "npm": "8.1.2"
     }
 }
