--- a/package.json
+++ b/package.json
@@ -4,23 +4,29 @@
     "author": "pozil",
     "bugs": "https://github.com/pozil/lwc-oss-manufacturing/issues",
     "dependencies": {
+        "@babel/core": "^7.18.2",
         "@grpc/grpc-js": "^1.6.7",
         "@grpc/proto-loader": "^0.6.12",
-        "@lwc/compiler": "^2.14.0",
-        "@lwc/engine": "^1.17.6",
         "avro-js": "^1.11.0",
         "bulma": "^0.7.5",
         "certifi": "^14.5.15",
         "dotenv": "^16.0.1",
-        "grpc": "^1.24.11",
         "jsforce": "^1.11.0",
-        "lwc-services": "^3.2.2",
+        "lwc": "^2.14.1",
+        "lwr": "^0.6.5",
         "ws": "^8.6.0"
     },
     "devDependencies": {
-        "eslint": "^7.32.0",
-        "husky": "^7.0.4",
-        "lint-staged": "^12.3.7",
+        "@lwc/eslint-plugin-lwc": "^1.2.1",
+        "@lwc/jest-preset": "^11.4.0",
+        "@salesforce/eslint-config-lwc": "^3.3.0",
+        "@salesforce/eslint-plugin-lightning": "^1.0.0",
+        "eslint": "^8.17.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jest": "^26.5.3",
+        "husky": "^8.0.1",
+        "jest": "^28.1.1",
+        "lint-staged": "^13.0.1",
         "prettier": "^2.6.2"
     },
     "engines": {
@@ -38,22 +44,17 @@
     },
     "repository": "pozil/lwc-oss-manufacturing",
     "scripts": {
-        "start": "npm run build && node src/server/server.js",
-        "build": "lwc-services build -m production",
-        "build:development": "lwc-services build",
+        "start": "MODE=prod node src/server/server.js",
+        "dev": "node src/server/server.js",
         "lint": "eslint ./src/**/*.js",
         "prettier": "prettier --write '**/*.{css,html,js,json,md,yaml,yml}'",
         "prettier:verify": "prettier --list-different '**/*.{css,html,js,json,md,yaml,yml}'",
-        "serve": "lwc-services serve",
-        "test:unit": "lwc-services test:unit",
-        "test:unit:coverage": "lwc-services test:unit --coverage",
-        "test:unit:debug": "lwc-services test:unit --debug",
-        "test:unit:watch": "lwc-services test:unit --watch",
-        "watch": "run-p watch:client watch:server",
-        "watch:client": "lwc-services watch",
-        "watch:server": "node scripts/express-dev.js",
-        "preinstall": "rm -fr src/client/resources/dependencies",
-        "postinstall": "husky install && mkdir -p src/client/resources/dependencies && cp node_modules/bulma/css/bulma.min.css src/client/resources/dependencies/.",
+        "test:unit": "jest",
+        "test:unit:coverage": "jest --coverage",
+        "test:unit:debug": "jest --debug",
+        "test:unit:watch": "jest --watch",
+        "preinstall": "rm -fr src/client/assets/dependencies",
+        "postinstall": "husky install && mkdir -p src/client/assets/dependencies && cp node_modules/bulma/css/bulma.min.css src/client/assets/dependencies/.",
         "precommit": "lint-staged"
     },
     "volta": {
