--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
     "name": "lwc-oss-manufacturing",
     "version": "1.0.0",
+    "private": true,
     "author": "pozil",
     "bugs": "https://github.com/pozil/lwc-oss-manufacturing/issues",
     "dependencies": {
-        "@babel/core": "^7.18.2",
+        "@babel/core": "^7.18.5",
         "@grpc/grpc-js": "^1.6.7",
         "@grpc/proto-loader": "^0.6.13",
         "avro-js": "^1.11.0",
         "bulma": "^0.7.5",
         "certifi": "^14.5.15",
         "dotenv": "^16.0.1",
+        "express": "^4.18.1",
         "jsforce": "^1.11.0",
-        "lwc": "^2.14.1",
+        "lwc": "^2.15.0",
         "lwr": "^0.6.5",
         "ws": "^8.8.0"
     },
     "devDependencies": {
-        "@lwc/eslint-plugin-lwc": "^1.2.1",
+        "@lwc/eslint-plugin-lwc": "^1.3.0",
         "@lwc/jest-preset": "^11.4.0",
-        "@salesforce/eslint-config-lwc": "^3.3.0",
+        "@salesforce/eslint-config-lwc": "^3.3.2",
         "@salesforce/eslint-plugin-lightning": "^1.0.0",
         "eslint": "^8.17.0",
         "eslint-plugin-import": "^2.26.0",
@@ -58,7 +60,6 @@
         "precommit": "lint-staged"
     },
     "volta": {
-        "node": "14.19.3",
-        "npm": "8.1.2"
+        "node": "14.19.3"
     }
 }
