--- a/package.json
+++ b/package.json
@@ -5,31 +5,31 @@
     "author": "pozil",
     "bugs": "https://github.com/pozil/lwc-oss-manufacturing/issues",
     "dependencies": {
-        "@babel/core": "^7.19.6",
+        "@babel/core": "^7.20.5",
         "@grpc/grpc-js": "^1.7.3",
         "@grpc/proto-loader": "^0.7.3",
         "avro-js": "^1.11.1",
-        "bulma": "^0.7.5",
+        "bulma": "0.7.5",
         "certifi": "^14.5.15",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "jsforce": "^1.11.0",
-        "lwc": "^2.29.0",
-        "lwr": "^0.8.3",
-        "ws": "^8.10.0"
+        "lwc": "^2.32.0",
+        "lwr": "^0.8.6",
+        "ws": "^8.11.0"
     },
     "devDependencies": {
         "@lwc/eslint-plugin-lwc": "^1.5.0",
         "@lwc/jest-preset": "^11.5.3",
         "@salesforce/eslint-config-lwc": "^3.3.3",
         "@salesforce/eslint-plugin-lightning": "^1.0.0",
-        "eslint": "^8.26.0",
+        "eslint": "^8.28.0",
         "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jest": "^27.1.3",
-        "husky": "^8.0.1",
-        "jest": "^29.2.2",
-        "lint-staged": "^13.0.3",
-        "prettier": "^2.7.1"
+        "eslint-plugin-jest": "^27.1.6",
+        "husky": "^8.0.2",
+        "jest": "^29.3.1",
+        "lint-staged": "^13.0.4",
+        "prettier": "^2.8.0"
     },
     "engines": {
         "node": "14.19.3"
