--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
     "name": "lwc-oss-manufacturing",
+    "type": "module",
     "version": "1.0.0",
     "private": true,
     "author": "pozil",
     "bugs": "https://github.com/pozil/lwc-oss-manufacturing/issues",
     "dependencies": {
         "@babel/core": "^7.20.7",
-        "@grpc/grpc-js": "^1.8.0",
-        "@grpc/proto-loader": "^0.7.4",
-        "avro-js": "^1.11.1",
         "bulma": "0.7.5",
-        "certifi": "^14.5.15",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "jsforce": "^1.11.0",
         "lwc": "^2.35.1",
         "lwr": "^0.8.8",
+        "salesforce-pubsub-api-client": "^2.1.3",
         "ws": "^8.11.0"
     },
     "devDependencies": {
@@ -26,13 +24,13 @@
         "eslint": "^8.31.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jest": "^27.2.0",
-        "husky": "^8.0.2",
+        "husky": "^8.0.3",
         "jest": "^29.3.1",
         "lint-staged": "^13.1.0",
         "prettier": "^2.8.1"
     },
     "engines": {
-        "node": "14.19.3"
+        "node": "^18"
     },
     "homepage": "https://github.com/pozil/lwc-oss-manufacturing",
     "license": "CC0-1.0",
@@ -60,6 +58,7 @@
         "precommit": "lint-staged"
     },
     "volta": {
-        "node": "14.19.3"
+        "node": "18.12.1",
+        "npm": "9.2.0"
     }
 }
