--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsforce": "^1.11.1",
-        "lwc": "^3.7.3",
+        "lwc": "^3.8.0",
         "lwr": "^0.10.10",
         "salesforce-pubsub-api-client": "^3.0.2",
         "ws": "^8.14.2"
@@ -27,7 +27,8 @@
         "husky": "^8.0.3",
         "jest": "^29.7.0",
         "lint-staged": "^15.0.1",
-        "prettier": "^3.0.3"
+        "prettier": "^3.0.3",
+        "shx": "^0.3.4"
     },
     "engines": {
         "node": "^18"
@@ -53,8 +54,8 @@
         "test:unit:coverage": "jest --coverage",
         "test:unit:debug": "jest --debug",
         "test:unit:watch": "jest --watch",
-        "preinstall": "rm -fr src/client/assets/dependencies",
-        "postinstall": "husky install && mkdir -p src/client/assets/dependencies && cp node_modules/bulma/css/bulma.min.css src/client/assets/dependencies/.",
+        "preinstall": "shx rm -fr src/client/assets/dependencies",
+        "postinstall": "husky install && shx mkdir -p src/client/assets/dependencies && shx cp node_modules/bulma/css/bulma.min.css src/client/assets/dependencies/.",
         "precommit": "lint-staged"
     },
     "volta": {
