--- a/package.json
+++ b/package.json
@@ -6,33 +6,33 @@
     "author": "pozil",
     "bugs": "https://github.com/pozil/lwc-oss-manufacturing/issues",
     "dependencies": {
-        "@babel/core": "^7.24.5",
+        "@babel/core": "^7.24.7",
         "bulma": "0.7.5",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.3",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
         "jsforce": "^1.11.1",
-        "lwc": "^3.8.0",
-        "lwr": "^0.10.12",
-        "salesforce-pubsub-api-client": "^3.0.2",
-        "ws": "^8.14.2"
+        "lwc": "^6.7.2",
+        "lwr": "^0.12.4",
+        "salesforce-pubsub-api-client": "^4.1.0",
+        "ws": "^8.17.1"
     },
     "devDependencies": {
-        "@lwc/eslint-plugin-lwc": "^1.8.1",
-        "@lwc/jest-preset": "^14.4.0",
-        "@salesforce/eslint-config-lwc": "^3.5.3",
+        "@lwc/eslint-plugin-lwc": "^1.8.2",
+        "@lwc/jest-preset": "^16.0.0",
+        "@salesforce/eslint-config-lwc": "^3.6.0",
         "@salesforce/eslint-plugin-lightning": "^1.0.0",
         "cross-env": "^7.0.3",
         "eslint": "^8.57.0",
         "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-jest": "^27.9.0",
-        "husky": "^8.0.3",
+        "eslint-plugin-jest": "^28.6.0",
+        "husky": "^9.0.11",
         "jest": "^29.7.0",
         "lint-staged": "^15.2.7",
-        "prettier": "^3.2.5",
+        "prettier": "^3.3.2",
         "shx": "^0.3.4"
     },
     "engines": {
-        "node": "^18"
+        "node": "^20"
     },
     "homepage": "https://github.com/pozil/lwc-oss-manufacturing",
     "license": "CC0-1.0",
@@ -56,11 +56,11 @@
         "test:unit:debug": "jest --debug",
         "test:unit:watch": "jest --watch",
         "preinstall": "shx rm -fr src/client/assets/dependencies",
-        "postinstall": "husky install && shx mkdir -p src/client/assets/dependencies && shx cp node_modules/bulma/css/bulma.min.css src/client/assets/dependencies/.",
+        "postinstall": "shx mkdir -p src/client/assets/dependencies && shx cp node_modules/bulma/css/bulma.min.css src/client/assets/dependencies/.",
+        "prepare": "husky || true",
         "precommit": "lint-staged"
     },
     "volta": {
-        "node": "18.12.1",
-        "npm": "9.2.0"
+        "node": "20.15.0"
     }
 }
